Update Git 0903 ver.1

--- a/Git/Git 정리 0902.md
+++ b/Git/Git 정리 0902.md
@@ -67,7 +67,7 @@ Visual Stodio Code의 **터미널**도 같은 기능
 커밋은 크게 세가지 영역을 바탕으로 동작한다.
 
 - **Working Directory**: 내가 작업하고 있는 실제 디렉토리
-  - 아직 Git에게 감시되고 있지 않은 파일 (unteacked)
+  - 아직 Git에게 감시되고 있지 않은 파일 (untracked)
   - `git status` 명령어를 통해 파일들의 상태 확인 가능
 - **Staging Area**: 커밋으로 남기고 싶은, 특정 버전으로 관리하고 싶은 파일이 있는 곳
   - `git add` 명령어를 통해 Git에게 이 파일을 관리할거라고 선언, Staging Area에 저장됨 (staged)
