--- a/Git/Git 정리 0903.md
+++ b/Git/Git 정리 0903.md
@@ -5,9 +5,11 @@
   - ./(현재 위치에서 하위로 이동) ../(현재 위치에서 상위로 이동)
   - cd 폴더이름 형태로 이동하는 것 역시 상대경로 중 하나
 
-##### 틸다(~)란?
+> **틸다(~)란?**
+>
+> : 사용자 폴더의 위치를 뜻하는 기호. 자주 쓰기 때문에 따로 기호를 만들어 둠
 
-: 사용자 폴더의 위치를 뜻하는 기호. 자주 쓰기 때문에 따로 기호를 만들어 둠
+
 
 # Git Remote 명령어
 
@@ -19,9 +21,15 @@
 
 실제로 remote repo(Github)에서 작업을 하고 local repo로 받아오는 것은 그렇게 권장되지 않음.
 
+> **언제 master를 쓰고 언제 main을 써야 하나?**
+>
+> : 내가 쓰는 repository의 branch이름을 확인하고 써야 한다.
+
 **그럼 pull은 어떨 때 쓰는가? 여러 사람이 함께 작업을 할 때 수정된 파일을 받아오기 위함.**
 
 이렇게 push와 pull을 활용하여 usb를 사용하지 않고 파일을 저장하고 받을 수 있음.
+
+
 
 # 문제상황 (conflict)
 
@@ -32,6 +40,8 @@
 ↑**local의 수정내용과 remote의 수정내용이 겹쳐있는 경우**. Git이 어느 수정사항을 반영해야할지 몰라서 충돌이 발생.
 
 정상적으로 수정한 뒤 add → commit → push를 하면 제대로 반영된다.
+
+
 
 # 변경사항 취소하기
 
@@ -44,7 +54,149 @@
 - `git restore {filename}` : Working Directory에서 시행한 모든 변경사항을 취소하고 디렉토리의 내용을 가장 최근의 commit과 동일하게 만듦
   - Github과 비교하는 게 아니라 **commit 파일**과 비교하는것!
   - ` git log`를 통해 볼 수 있는 commit 파일들 중 가장 최근 것.
+  - 주로 파일이 수정되었으나 이전과 차이가 없을 때, 무엇이 수정된건지 모를 때 상태를 되돌리기 위해 사용.
 
-## commit으로 되돌리기
+## commit으로 되돌리기 : 경험만 해보자.
 
-- `git reser --hard {c_id}` : Working Directory의 내용을 해당하는 commit 파일과 동일하게 만듦
+- `git reset --hard {c_id(커밋의 주소. 아이디)}` : Working Directory의 내용을 해당하는 commit 파일과 동일하게 만듦
+  - 단순히 로컬의 파일 내용만 동일해지는 게 아니라 `git log`의 커밋 파일 기록도 초기화됨!
+  - 다시 최근으로 돌아가려면? : `git pull origin master`로 다시 파일을 가져오면 된다.
+    - 이 경우 `git log`도 다시 원래대로 돌아옴
+- `git reset` 옵션은 `--hard`뿐만 아니라 `--soft`, `--mixed`옵션도 존재한다. 
+
+|           |  WD  |  SA  |  RP  |
+| --------- | :--: | :--: | :--: |
+| `--soft`  |  X   |  X   |  O   |
+| `--mixed` |  X   |  O   |  O   |
+| `--hard`  |  O   |  O   |  O   |
+
+- O: 과거의 커밋 모습으로 돌아감
+- X: 현재 내가 작업하고 있는 모습이 그대로 남아있음
+
+### **왜 이렇게 할까?**
+보통 commit을 남기는 건 그 파일이 하나의 완성된 완전한 버전인 경우.
+
+만약 내가 WD에서 작업한 파일을 commit하지 않았는데 hard reset을 하는 경우 작업한 내용이 다 날아가게 된다. 그 때문에 reset에 여러가지 버전을 남겨두는 것
+
+(But 지금은 이정도만 정리해도 ㄱㅊ)
+
+
+
+# git ignore: 원하지 않는 파일 무시하기
+
+- .gitignore 파일도 README.md 처럼 특별한 기능이 있다. 바로 **파일에 적힌 내용대로 git이 버전관리를 하지 않는 것!**
+- 만약 폴더에 있는 파일들 중 민감한 개인정보가 있는 등 업로드 되어서는 안되는 파일이 있다면 그 파일명을 .gitignore 파일에 적어둠 → 그럼 git이 그 파일을 무시한다.
+  - `data.csv` : 특정 파일을 무시한다.
+  - `*.txt` : 그냥 파일명 뿐만 아니라 확장자를 써서 해당 확장자의 파일 전체를 무시할 수도 있다.
+  - `!{filname}.png` : 특정한 이름의 파일을 제외한 모든 확장자를 무시한다.
+  - `{dirname}/` : 특정한 디렉토리 안의 모든 파일을 무시한다.
+  - .gitignore에 등록하기 전에 이미 커밋한 파일이 있다면 그건 git이 계속 주시함
+
+> **/** : 경로구분자. 폴더이름 뒤에 붙여 그 폴더 안의 내용을 가리킨다.
+>
+> 윈도우의 경우 /이 아닌 \를 사용하기도.
+
+## 나에게 꼭 맞는 .gitignore 만들기
+
+[gitignore.io](https://www.toptal.com/developers/gitignore)
+
+- 운영체제 및 프로그램 언어를 입력하면 그에 맞는 gitignore 파일을 생성해준다.
+- 자잘한 파일들 뿐만 아니라 자동으로 생성되는 잡다한 파일들을 자동으로 제외할 수 있도록 코드를 생성해줌
+- .gitignore 파일은 이 사이트를 기반으로 생성하고 특수한 경우는 직접 타이핑을 하면 편리하게 쓸 수 있다.
+
+
+
+# 브랜치(Branch): 특정 커밋을 가리키는 꼬리표
+
+## 기본적인 브랜치 명령어들
+
+- `git branch` : 현재 존재하는 브랜치 목록을 확인할 수 있음. 현재 커밋이 포함된 브랜치는 앞에 * 표시가 붙음
+  - `git branch {branchname}` : 해당하는 이름의 새로운 브랜치를 생성함
+- `git checkout {branchname}` : 해당하는 이름의 브랜치로 이동함
+  - 한 브랜치에서 커밋한 파일은 다른 브랜치에서 똑같이 커밋하지 않는 이상 **반영되지 않음**.
+  - but <u>remote repo를 설정하는 것은 브랜치 위치에 관계 없다</u>.
+  - `git checkout -b {branchname}` : 해당하는 이름의 브랜치를 생성하고 이동함
+- `git merge -d {branchname}` : 해당하는 이름의 브랜치를 삭제함
+
+### 왜 이렇게 할까?: Branch merge
+
+master 브랜치에는 완전히 완성된 버전만을 남겨두고 싶은 경우, 수정중인 커밋을 다른 브랜치에 저장하여 구분함
+
+수정중인 커밋이 완성된다면 `git merge {branchname}`을 사용하여 다른 브랜치의 커밋을 합칠 수 있다. (**이름이 적힌 브랜치의 커밋**이 현재 있는 브랜치에 합쳐진다.)
+
+보통 새로운 기능을 개발하고 싶을 경우 master(=default) 브랜치는 그냥 두고 새로운 브랜치를 만들어 거기서 진행한다. 괜히 master 브랜치를 건드렸다가 기능 전체가 꼬일 수 있기 때문. 나중에 문제없이 만들고 나서 master 브랜치에 합친다.
+
+- `git merge` 뒤에 오는 브랜치는 디폴트 브랜치든 아니든 상관 없음.
+- `git merge`를 하게 되면 `git add`와 `git commit`의 과정을 거치지 않고 `git push`만 하면 된다. (다른 브랜치에서 커밋할때 이미 했으므로)
+- `git log --graph --oneline`를 통해 각 브랜치에 커밋이 생성되고 합쳐진 기록을 확인할 수 있다.
+
+#### **합치는 과정에서 conflict가 발생**할 수 있다.
+
+충돌은 오류가 아니라 이력을 반영하는 과정에서 반드시 발생하는 것이므로 직접 수정해주면 된다.
+
+> **Branch는 많으면 많을수록 좋다**. 다양한 수정사항을 저장해놓고 나중에 합칠 수 있기 때문
+>
+> 하지만 분리만 해놓고 다시 merge 하지 않으면 지저분해진다!!!! 분리한 브랜치의 내용을 합친 뒤 브랜치를 삭제함으로써 깔끔하게 사용할 수 있음.
+>
+> 지금은 브랜치를 어떻게 만들며 어떻게 옮겨다니고, 어떻게 합치는지 알아두는걸로 충분.
+
+#### fast-forward, merge commit case
+
+master 브랜치에선 별도의 작업을 하지 않고 다른 브랜치에서 작업을 한 뒤, 이를 master 브랜치와 병합하는 경우. → 별도의 작업이 없는 master 브랜치를 해당 브랜치로 끌어오면 간단함. 이런 작업을 **fast-foward**라고 한다.
+
+- fast-forward는 별도의 명령이 필요 없으며, Git이 자동으로 처리한다.
+- but 만약 master branch에서 작업을 한 뒤 병합을 진행한다면 fast-forward가 불가능! 이 경우를 **merge commit case**라고 한다.
+
+
+
+## Git Flow
+
+| branch                            | 주요 특징                                                    | 예시                              |
+| --------------------------------- | ------------------------------------------------------------ | --------------------------------- |
+| **Master** (main)                 | 배포 가능한 상태의 코드                                      | LOL 클라이언트 라이브 버전 (9.23) |
+| **Develop** (main)                | feature branch로 나뉘어지거나, 발생된 버그 수정 등 개발 진행<br />개발 이후 **release branch**로 갈라짐 | 다음 버전을 위한 개발 (9.24)      |
+| **feature branches** (supporting) | 기능별 개발 브랜치 (topic branch)<br />기능이 개발되거나 드랍되는 경우 브랜치 삭제 | 신규 챔피언 세나 업데이트         |
+| **release branches** (supporting) | 개발 완료 이후 QA/Test 등을 통해 얻어진 다음 배포 전 minor bug fix 등 반영 | 9.24α, 9.24β …                    |
+| **Hotfixes** (supporting)         | 긴급하게 반영해야 하는 bug fix<br />release branch가 다음 버전을 위한 것이라면, hotfix는 현재 버전을 위한 것 | 긴급 패치를 위한 작업             |
+
+#### Git Flow의 기본 원칙
+
+1. master branch는 반드시 배포 가능한 상태여야 한다.
+2. feature branch는 각 기능의 의도를 알 수 있도록 작성한다.
+3. Commit message는 매우 중요하며, 명확하게 작성한다.
+4. Pull Request를 통해 협업을 진행한다.
+
+5. 변경 사항을 반영하고 싶다면, master branch에 병합한다.
+
+### Github Flow Models
+
+위의 Git Flow 제안에 기반한 협업 모델들.
+
+이 두 모델을 쓸때도 위의 제안에 따라 **master 브랜치에서 직접 작업하는 건 지양!**
+
+#### 1. Shared Repository Model
+
+동일한 저장소를 공유하여 활용하는 방식.
+
+- 팀장: repository owner ( = project manager )
+- 팀원: collaborator ( a.k.a no-yeah-contributor )
+
+  ##### Step 0-1. Invite Collaborator
+
+  팀장이 팀원을 초대. collaborator에 등록되어야 해당 저장소에 push를 할 수 있다.
+
+  ##### Step 0-2. Accept Invitaion
+
+  이메일을 통해 전송된 초대 메일을 팀원이 받는다. 이 때, 해당 저장소 주소 뒤에 /invitation을 붙여 확인할 수도 있다.
+
+#### 2. Fork & Pull Model
+
+해당 레포지토리에 직접 collaborator로 등록되는 게 아니라, 해당 레포지토리의 파일을 fork로 내 레포지토리에 가져온 뒤 직접 개발하고 개발한 코드를 해당 레포지토리 팀장에게 PR하는 방식.
+
+- Shared Repository Model과는 달리 내가 레포지토리에 참여한 게 아니기 때문에, <u>PR을 할 때 브랜치를 직접 선택할 수가 없다</u>.
+
+상대가 어떤 사람인지도 모른 채 무작정 collaborate 시켜주는 건 위험부담이 높기 때문에 사용.
+
+PR한 내용을 팀장이 수락한 경우 내가 개발한 내용이 레포지토리에 반영되며, 내가 Contributor로 등록된다.
+
+대부분의 오픈소스 프로그램은 이런 방식을 채택하고 있으며, **내가 어떤 오픈소스 파일 개발에 Contributor로 등록된다면 나의 커리어에 엄청난 기여를 할 수 있다**.
